--- a/src/JarOfGreen/BrowserIDBundle/Resources/config/routing.yml
+++ b/src/JarOfGreen/BrowserIDBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
-jar_of_green_browser_id_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: JarOfGreenBrowserIDBundle:Default:index }
+jar_of_green_browser_id_login:
+    pattern:  /login/
+    defaults: { _controller: JarOfGreenBrowserIDBundle:Default:login }
+
+jar_of_green_browser_id_logout:
+    pattern:  /logout/
+    defaults: { _controller: JarOfGreenBrowserIDBundle:Default:logout }
+    
+    
