--- a/src/JarOfGreen/SampleAppBundle/Resources/config/routing.yml
+++ b/src/JarOfGreen/SampleAppBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 jar_of_green_sample_app_homepage:
-    pattern:  /hello/{name}
+    pattern:  /
     defaults: { _controller: JarOfGreenSampleAppBundle:Default:index }
